=== changes in behavior that would not be backwards compatible with
=== previous versions; for that information see the UPGRADE.txt file
=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.8 to Asterisk 10 -------------------
------------------------------------------------------------------------------

Text Messaging
--------------
 * Asterisk now has protocol independent support for processing text messages
   outside of a call.  Messages are routed through the Asterisk dialplan.
   SIP MESSAGE and XMPP are currently supported.  There are options in
   jabber.conf and sip.conf to allow enabling these features.
     -> jabber.conf: see the "sendtodialplan" and "context" options.
     -> sip.conf: see the "accept_outofcall_message", "auth_message_requests"
        and "outofcall_message_context" options.
   The MESSAGE() dialplan function and MessageSend() application have been
   added to go along with this functionality.  More detailed usage information
   can be found on the Asterisk wiki (http://wiki.asterisk.org/).

Parking
-------
 * parkedmusicclass can now be set for non-default parking lots.
 * ParkedCall application can now specify a specific parkinglot.

Asterisk Manager Interface
--------------------------
 * PeerStatus now includes Address and Port.
 * Added Hold events for when the remote party puts the call on and off hold
   for chan_dahdi ISDN channels.
 * Added new action MeetmeListRooms to list active conferences (shows same
   data as "meetme list" at the CLI).
 * DAHDIShowChannels, SIPshowpeer, SIPpeers, and IAXpeers now contains a
   Description field that is set by 'description' in the channel configuration
   file.
 * Added Uniqueid header to UserEvent.
 * Added new action FilterAdd to control event filters for the current session.